--- a/src/css/atom/card.scss
+++ b/src/css/atom/card.scss
@@ -3,7 +3,7 @@
 	color: #444;
 	width: 100%;
 	text-align: center;
-	background: #FFF;
+	background: #FAFAFA;
 	border-radius: 4px;
 	padding: 40px 10px;
 	transition: all 500ms ease-in-out;
@@ -23,25 +23,32 @@
 		height:240px;
 		padding:0;
 		margin:0;
-		transition: all 200ms ease-in-out;
-		transform:scale(1);
+		transition: all 500ms ease-in-out;
+		-webkit-filter:brightness(0.6);
 	}
-	&:hover, &.active {
-		box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.15);
+	&.color:before {
+		content:"";
+		position:absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:20px;
+		background-color: rgba(color("primary", "base"), 0.2);
+		transform:translateY(0px);
+		transition: all 500ms ease-in-out;
+	}
+	&.hover.color:before {
+		transform:translateY(-20px);
+	}
+	&.hover:hover, &.active {
+		box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.15);
   		margin-top: -10px;
+  		&.color:before {
+  			transform:translateY(0px);
+  		}
 		figure img {
-			transform:scale(1.1);
+			-webkit-filter:brightness(1);
 		}
 	}
-	&.active {
-		&:after{
-			content:"";
-			margin:-10px;
-			margin-top:-40px;
-			margin-bottom:20px;
-			width:100%;
-			height:10px;
-			background-color:blue;
-		}
-	}
+
 }
