--- a/src/css/atom/special-button/codrops-naira.scss
+++ b/src/css/atom/special-button/codrops-naira.scss
@@ -1,3 +1,5 @@
+
+
 .button-box {
     display:inline-block;
     text-align: center;
@@ -12,10 +14,6 @@
   position: relative;
   z-index: 1;
   -moz-osx-font-smoothing: grayscale;
-}
-.special-button.reversed {
-  border: 1px solid $color-primary;
-  border-radius: 5px;
 }
 
 .special-button > span {
@@ -51,7 +49,7 @@
   left: 0;
   right:0;
   margin: 0 auto;
-  color: black;
+  color: color("primary", "base");
   transform: translate3d(0, -100%, 0);
 }
 
