--- a/src/css/atom/special-nav/underline-effect.scss
+++ b/src/css/atom/special-nav/underline-effect.scss
@@ -1,3 +1,5 @@
+$color: white;
+
 @keyframes widthAnim {
   from {
     width: 0; }
@@ -23,7 +25,7 @@
 .scale-stroke {
   height: 1px;
   display: inline-block;
-  color: $color-grey-text;
+  color: $color;
   position: relative;
   cursor: pointer;
 }
@@ -31,7 +33,7 @@
 .left-stroke:hover:after {
     content: '';
     display: block;
-    background: $color-grey-text;
+    background: $color;
     height: 1px;
     float: left;
     animation: widthAnim 400ms cubic-bezier(0.385, 0.855, 0.5, 0.995) forwards;
@@ -39,7 +41,7 @@
 .right-stroke:hover:after {
   content: '';
   display: block;
-  background: $color-grey-text;
+  background: $color;
   height: 1px;
   float: right;
           animation: widthAnim 400ms cubic-bezier(0.385, 0.855, 0.5, 0.995) forwards; }
@@ -49,7 +51,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  background: $color-grey-text;
+  background: $color;
   height: 1px;
           animation: widthAnim 400ms cubic-bezier(0.385, 0.855, 0.5, 0.995) forwards; }
 .double-stroke:hover:after {
@@ -58,7 +60,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  background: $color-grey-text;
+  background: $color;
   height: 1px;
           animation: widthAnim 400ms cubic-bezier(0.385, 0.855, 0.5, 0.995) forwards; }
 .fancy-stroke:hover:before {
@@ -66,7 +68,7 @@
   display: block;
   position: absolute;
   right: 0;
-  background: $color-grey-text;
+  background: $color;
   height: 1px;
           animation: widthAnim 400ms cubic-bezier(0.385, 0.855, 0.5, 0.995) forwards; }
 .fancy-stroke:hover:after {
@@ -75,13 +77,13 @@
   position: absolute;
   left: 0;
   right: 0;
-  background: $color-grey-text;
+  background: $color;
   height: 1px;
           animation: widthAnim 400ms cubic-bezier(0.385, 0.855, 0.5, 0.995) forwards; }
 .scale-stroke:hover:after {
   content: '';
   display: block;
-  background: $color-grey-text;
+  background: $color;
   height: 1px;
           animation: bounceIn 400ms cubic-bezier(0.385, 0.855, 0.5, 0.995) forwards; }
 
