--- a/src/css/grid.scss
+++ b/src/css/grid.scss
@@ -20,11 +20,6 @@ $columns: 12 !default;
 $gutter: 0.5rem !default;
 
 
-.cell {
-    margin-top:5px!important;
-    margin-bottom:5px!important;
-}
-
 * {
     box-sizing: border-box;
 }
@@ -39,13 +34,12 @@ $gutter: 0.5rem !default;
 
 .col
 {
+    height:300px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    &.cell {
-      flex: 1;
-    }
-}
+ }
+
 
 .row-gutter {
   margin: -1em 0 0 -1em;
