big update and refact on effects

--- a/src/css/atom/button.scss
+++ b/src/css/atom/button.scss
@@ -5,6 +5,12 @@
                 span text
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+    .button-box {
+      display:inline-block;
+      text-align: center;
+      width:100%;
+    }
+
     .button{
         display: inline-block;
         padding:10px 30px;
