--- a/src/css/component/_fixed-background.scss
+++ b/src/css/component/_fixed-background.scss
@@ -17,7 +17,7 @@
 		height:100%;
 		left:0;
 		top:0;
-		background-color: $color-grey-text;
+		background-color: color("grey", "base");
 	}
 	.section-background {
 		width:100%;
