--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,9 +1,6 @@
 @import "helper/core";
 
 @import "color";
-@import "media";
-@import "grid";
-@import "icon";
 @import "base";
 
 @import "atom/button";
@@ -13,21 +10,13 @@
 @import "atom/link";
 @import "atom/code";
 @import "atom/hr";
-@import "atom/card";
 @import "atom/tag";
-@import "atom/inclined";
 @import "atom/select";
 
-@import "atom/special-shape/circle";
-@import "atom/special-shape/square";
+@import "molecule/inclined";
+@import "molecule/form";
+@import "molecule/card";
 
-@import "atom/special-nav/underline-effect";
-@import "atom/special-touch/codrops-ivana";
-@import "atom/special-button/codrops-naira";
-@import "atom/special-input/materials";
-@import "atom/select/react-select";
-
-@import "component/circle-transition";
 @import "component/modal";
 @import "component/navbar";
 @import "component/fixed-background";
@@ -41,7 +30,6 @@
 @import "template/main";
 @import "template/demo";
 @import "template/reader";
-@import "template/blog";
 @import "template/vitrine";
 
 #app-container, #app-container>div  {
