--- a/src/css/atom/blockquote.scss
+++ b/src/css/atom/blockquote.scss
@@ -10,7 +10,7 @@ blockquote.pullquote {
 	text-indent: -0.32em;
 	display: inline-block;
 	font-style: italic;
-	color: lighten($color-grey-text, 30%);
+	color: color("grey", "ligthen-3");
 	padding-left: 60px;
 	p {
 		font-style: inherit;
