--- a/src/css/atom/select.scss
+++ b/src/css/atom/select.scss
@@ -47,11 +47,6 @@
 	     }
 	}
 
-	.select-image {
-	    background: url("http://css.yipitcdn.com/img/arrow-down.png") no-repeat center right, linear-gradient(#fff, #E7E7E7);
-	}
-
-
 	.select-noimage {
 	  &:after {
 	    content: '';
@@ -63,6 +58,6 @@
 	    border-width: 6px 4px;
 	    border-style: solid;
 	    pointer-events: none;
-	    border-color: $color-grey-text transparent transparent transparent;
+	    border-color: color("grey", "base") transparent transparent transparent;
 	  }
 	}
