--- a/src/css/template/_reader.scss
+++ b/src/css/template/_reader.scss
@@ -31,7 +31,7 @@
 		h6 {
 			text-align: center;
 			margin:0;
-			color: lighten($color-grey-text, 20%);
+			color: color("grey", "ligthen-2");
 		}
 		a {
 			color: $color-primary;
