--- a/src/css/template/_vitrine.scss
+++ b/src/css/template/_vitrine.scss
@@ -19,7 +19,7 @@ $color-primary: #47DBB4;
 		margin: 0 auto;
 	}
 	.dark {
-		background-color: color("blue-grey", "darken-4");
+		background-color: color("grey", "darken-4");
 		h1,h2,h3,h4,h5,h6 {
 			color:white;
 		}
@@ -28,8 +28,8 @@ $color-primary: #47DBB4;
 		text-align: center;
 	}
 	.subtle-grey {
-		background-color:$color-subtle-grey;
-		border-bottom: 1px solid $color-subtle-border;
+		background-color:color("grey", "ligthen-4");
+		border-bottom: 1px solid color("grey", "ligthen-3");
 	}
 
 	.pricing {
@@ -60,9 +60,6 @@ $color-primary: #47DBB4;
 		.section-background {
 			-webkit-filter: brightness(0.6);
 		}
-		button {
-			@extend .primary;
-		}
 		h4 {
 			@extend .uppercase;
 			letter-spacing: 0.7rem;
@@ -83,7 +80,7 @@ $color-primary: #47DBB4;
 	}
 	.fixed-background {
 		button {
-			@extend .primary;
+			@include naira(white, color("primary","base"));
 		}
 		h4 {
 			@extend .uppercase;
@@ -111,6 +108,19 @@ $color-primary: #47DBB4;
 			margin-top: 25px;
 			margin-left: 30px;
 			display:inline-block;
+			&:nth-child(1){
+				@include underline-by-right(white);
+			}
+			&:nth-child(2){
+				@include underline-by-right(white);
+			}
+			&:nth-last-child(1){
+				@include underline-by-left(white);
+			}
+			&:nth-last-child(2){
+				@include underline-by-left(white);
+			}
+
 			a {
 				font-size: 1.8rem;
 				font-family: $title-font;
@@ -130,7 +140,7 @@ $color-primary: #47DBB4;
 			}
 		}
 		&.fixed {
-			background-color: rgba(color("blue-grey", "darken-4"), 0.8);
+			background-color: rgba(color("grey", "darken-4"), 0.8);
 			border-bottom:0px solid;
 			ul li {
 				margin-top: 4px;
@@ -162,7 +172,7 @@ $color-primary: #47DBB4;
 	}
 
 	footer {
-		background-color: color("blue-grey", "darken-4");
+		background-color: color("grey", "darken-4");
 		color:white;
 		padding:40px;
 		h1,h2,h3,h4,h5,h6 {
@@ -176,10 +186,10 @@ $color-primary: #47DBB4;
 			line-height: $text-size / 1.3;
 			color: color("primary", "base");
 			font-weight: 600;
-			border-bottom: 1px solid rgba(color("blue-grey", "darken-1"), 0.3);
+			border-bottom: 1px solid rgba(color("grey", "darken-1"), 0.3);
 			&:focus, &:hover {
 				text-decoration: none;
-				border-bottom: 1px solid rgba(color("blue-grey", "darken-1"), 0.8);
+				border-bottom: 1px solid rgba(color("grey", "darken-1"), 0.8);
 			}
 		}
 	}
