--- a/src/css/atom/tag.scss
+++ b/src/css/atom/tag.scss
@@ -1,19 +1,17 @@
-ul.tag {
-	li {
-		font-size: modular-scale(0, $text-size, $ratio);
-		display:inline-block;
-		padding: 0 1rem;
-		white-space: nowrap;
-		background:rgba(0,0,0,0.1);
-		border: 1px solid #E1E1E1;
-		border-radius: 4px;
-		display:inline-block;
-		margin-right:$text-size;
-		margin-top:$text-size * 2;
-		margin-bottom:$text-size * 2;
-		transition:all 200ms ease-in-out;
-		&:hover {
-			background: rgba(0,0,0,0.2);
-		}
+.tag {
+	font-size: modular-scale(0, $text-size, $ratio);
+	display:inline-block;
+	padding: 0 2rem;
+	white-space: nowrap;
+	background:transparent;
+	border: 1px solid rgba(0,0,0,0.2);
+	border-radius: 50px;
+	display:inline-block;
+	margin-right:$text-size;
+	margin-top:$text-size * 2;
+	margin-bottom:$text-size * 2;
+	transition:all 200ms ease-in-out;
+	&:hover {
+		border: 1px solid rgba(0,0,0,0.5);
 	}
 }
