--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -31,8 +31,8 @@
 		$text-size: 1.4rem;
 
 		$title-font: "Roboto", sans-serif;
-		$text-font: "Merriweather", serif;
-		$base-color: color("grey", "darken-2");
+		$text-font: "Libre Baskerville", serif;
+		$base-color: color("grey", "darken-3");
 
 	/* # Core
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -89,11 +89,11 @@
 
  		p, blockquote, li, q {
  			font-feature-settings: 'kern', 'onum', 'liga';
- 			@include modular-scale(2, $text-size, $ratio);
+ 			@include modular-scale(1, $text-size, $ratio);
  			font-weight: 400;
- 			line-height: $text-size * 3;
+ 			line-height: $text-size * 2;
 			letter-spacing: .03rem;
-			color:lighten($base-color, 10%);
+			color: $base-color;
 		 	margin-bottom: $text-size;
 		 	&:after {
 		 		clear:both;
@@ -166,3 +166,4 @@
 		.capitalize 	{ text-transform: capitalize; }
 		.upper-first	{ display:block; &:first-letter { text-transform: uppercase; }  }
 
+		.unselectable   { user-select: unselectable; }
