--- a/src/css/component/_preloader.scss
+++ b/src/css/component/_preloader.scss
@@ -3,15 +3,13 @@ body {
 	overflow-x:hidden;
 	overflow-y:scroll;
 }
+
 .screen-box {
 	width:100%;
 	height:100%;
 }
 
-
-// LOADER
-
-.center {
+.preloader {
 	position:fixed;
 	top:0;
 	left:0;
@@ -37,3 +35,5 @@ body {
   	&.active {
   	}
 }
+
+
