--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -63,6 +63,8 @@
 			background-size: 100% $text-size;
 		}
 
+		img {max-width:100%;}
+
 	/* # Titles
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
