--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -51,7 +51,10 @@
 #app-container, #app-container>div  {
 	width:100%;
 	height:100%;
+	// background-image: url('../images/patterns/dot-grey.png');
+ //    background-repeat: repeat-xy;
 }
+
 
 //html {background-color:#E2E2E2;}
 
