--- a/src/css/template/_intro.scss
+++ b/src/css/template/_intro.scss
@@ -2,23 +2,83 @@
 	width:100%;
 	height:100%;
 	display:flex;
+	overflow:hidden;
 	&>div {
 		margin: auto;
-		text-align:center;
-		h2 span {
+		&>div {
+			text-align:center;
 			text-transform: uppercase;
 			letter-spacing: .1rem;
 			color: color("grey", "lighten-3");
+			width:100%;
+			@include modular-scale(4, $title-size, $ratio);
+			span:last-child {
+				@include modular-scale(2, $title-size, $ratio);
+				color: color("primary", "base");
+				//@extend .uppercase;
+				font-family:"Libre Baskerville";
+				font-style: italic;
+			}
 		}
-		#cursor {
-			width: 5px;
-			background-color: color("primary", "base");
-			height:30px;
-			z-index: 12;
-			display:inline-block;
-			margin-left: 10px;
-			animation: cursorBlink infinite;
-			animation-duration: 2000ms;
+		button {
+	        margin: 0 auto;
+			margin-top:16px;
+	        display: block;
+	        padding:10px 30px;
+	        text-decoration: none;
+	        cursor:pointer;
+	        color: color("grey", "lighten-1");
+	        background-color: color("grey", "lighten-3");
+	        //border: 1px solid color("grey", "base");
+	        text-transform: uppercase;
+	        text-decoration: none;
+	        white-space: nowrap;
+	        transition: all, 200ms, ease-in-out;
+	        border-radius:5px;
+	        user-select:none;
+	        border-radius:50px;
+	        width:150px;
+	        transition:all 200ms ease-in-out;
+	        &:hover {
+	        	background-color: color("primary", "base");
+	        	//border: 1px solid color("primary", "darken-2");
+	        	color:white;
+	        }
+	        &.collapse {
+	        	content:""!important;
+	        	width:40px;
+	        	height:40px;
+	        	padding:0;
+	        	span {
+	        		display:none;
+	        	}
+	        }
 		}
 	}
+}
+
+$base-color: #EEE; 
+
+.oldPortfolioEffect {
+  font-family: 'Open Sans', sans-serif;
+  color: #555;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 800;
+  text-shadow: white 4px 4px 0;
+  position: relative;
+}
+.oldPortfolioEffect:after {
+  content:"THIBAUD FRERE";
+  position: absolute;
+  left: 4px;
+  top: 8px;
+  width:calc(100% + 8px);
+  background-image: -webkit-linear-gradient(left top, transparent 0%, transparent 25%, $base-color 25%, $base-color 50%, transparent 50%, transparent 75%, $base-color 75%);
+  background-size: 4px 4px;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: -5;
+  display: block;
+  text-shadow: none;
 }
