--- a/src/templates/nav.jade
+++ b/src/templates/nav.jade
@@ -29,11 +29,10 @@ footer
 					li
 						a(ui-sref="nav.contact" compile-unsafe="'views.footer.list2_1' | translate")
 					li
-						a(href="http://twitter.com/peon" compile-unsafe="'views.footer.list2_2' | translate")
+						a(href="http://twitter.com/peon_actu" compile-unsafe="'views.footer.list2_2' | translate")
 					li
-						a(href="http://facebook.com/peon" compile-unsafe="'views.footer.list2_3' | translate")
-					li
-						a(href="http://googleplus.com/peon" compile-unsafe="'views.footer.list2_4' | translate")
+						a(href="http://facebook.com/gopeon" compile-unsafe="'views.footer.list2_3' | translate")
+
 			.three.col
 				h6(compile-unsafe="'views.footer.title3' | translate")
 				ul.no-style
