--- a/src/index.jade
+++ b/src/index.jade
@@ -66,7 +66,7 @@ html(ng-scroll="" ng-app="app")
 
 
 		body
-			.beta.large-display
+			//.beta.large-display
 			div(ui-view="")
 			script(type="text/javascript" src="vendor/vendor.min.js")
 			script(type="text/javascript" src="scripts/app.min.js")
