--- a/src/templates/nav.jade
+++ b/src/templates/nav.jade
@@ -6,7 +6,7 @@ nav
 				a.pull-left.uppercase.large-display(ui-sref-active="active" ui-sref="nav.assistance" compile-unsafe="'views.nav.support' | translate")
 				a.pull-left.uppercase.large-display(ui-sref-active="active" ui-sref="nav.blog" compile-unsafe="'views.nav.blog' | translate")
 				a.pull-left.uppercase.large-display(ui-sref-active="active" ui-sref="nav.faq" compile-unsafe="'views.nav.questions' | translate")
-				div.pull-right.half-left(ng-translate-language-select)
+				//- div.pull-right.half-left(ng-translate-language-select)
 				a.button.small.pull-right.complement(href="http://app.peon.fr" compile-unsafe="'views.nav.login' | translate")
 				a.button.small.pull-right.primary(ng-click="trackCreate()" href="http://app.peon.fr/inscription" compile-unsafe="'views.nav.signup' | translate")
 
