--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -57,7 +57,7 @@ section
 			.six.col
 				h4 Fonctionnalités
 				hr.light.lines.tiny.double-bot
-				ul
+				ul.arg-list
 					li Gestion des impayés
 					li Calcul en temps réel des charges
 					li Gestion des taux pour l’ACCRE
@@ -69,7 +69,7 @@ section
 			.six.col
 				h4 Abonnement
 				hr.light.lines.tiny.double-bot
-				ul
+				ul.arg-list
 					li Tarif unique
 					li Sans engagement
 					li Délais de 7 jours en cas de non paiement
