--- a/src/styles/molecule/home.scss
+++ b/src/styles/molecule/home.scss
@@ -203,23 +203,23 @@ section.background {
 	background-image: url('../assets/imgs/svg/bill.svg');
 }
 
-ul {
+ul.arg-list {
 
     list-style: none;
-}
 
-li {
-position:relative; 
-	line-height: 30px;
-	margin-left:-10px;
-    text-indent: -.7em;
-}
+	li {
+	position:relative; 
+		line-height: 30px;
+		margin-left:-10px;
+	    text-indent: -.7em;
+	}
 
-li:before {
-	position:absolute;
-    content: "• ";
-    color: $color-primary; /* or whatever color you prefer */
-    zoom:2;
-    top:0px;
-    left:-10px;
+	li:before {
+		position:absolute;
+	    content: "• ";
+	    color: $color-primary; /* or whatever color you prefer */
+	    zoom:2;
+	    top:0px;
+	    left:-10px;
+	}
 }
