--- a/src/css/color.scss
+++ b/src/css/color.scss
@@ -1,7 +1,7 @@
 /* # Colors
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-	$color-primary:					#47DBB4;
+	$color-primary:					#343743;
 	$color-complement:				#FF9153;
 	$color-success:					#149A57;
 	$color-info:					#303E73;
