--- a/src/css/component/_scroll-progress.scss
+++ b/src/css/component/_scroll-progress.scss
@@ -1,15 +1,15 @@
 .scroll-progress {
 	position:fixed;
-	z-index: 999;
+	z-index: 9999;
 	width:100%;
-	height:4px;
+	height:2px;
 	top:0;
 	left:0;
 	.scroll-progress-bar {
 		content:"";
 		width:1px;
-		height:4px;
-		background-color: rgb(0,0,0);
+		height:2px;
+		background-color: color("primary", "base");
 		opacity:0.5;
 	}
 }
