--- a/src/css/helper/element/nav/underline.scss
+++ b/src/css/helper/element/nav/underline.scss
@@ -47,6 +47,7 @@
         background: $color;
         height: 1px;
         float: left;
+        margin-top:4px;
         animation: widthAnim 400ms cubic-bezier(0.385, 0.855, 0.5, 0.995) forwards;
     }
 }
