--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -28,11 +28,11 @@
 @import "component/video-handler";
 
 @import "template/main";
-@import "template/demo";
-@import "template/reader";
 @import "template/vitrine";
+@import "template/nav";
+@import "template/footer";
 
-#app-container, #app-container>div  {
+#app-container, #app-container>div, .screen-box  {
 	width:100%;
-	height:100%;
+	min-height:100%;
 }
