--- a/src/css/template/_vitrine.scss
+++ b/src/css/template/_vitrine.scss
@@ -1,77 +1,58 @@
 $color-primary: #47DBB4;
 
+.two-col-text {
+	-webkit-column-count: 2;
+	column-count: 2;
+}
+
+.padding {
+	padding-top:80px;
+	padding-bottom:80px;
+}
+.page {
+	width:960px;
+	margin: 0 auto;
+}
+
+.punchline {
+	padding-top:160px;
+	padding-bottom:80px;
+}
+
 .vitrine {
 	animation: fadeIn;
 	animation-duration: .5s;
 	h1,h2,h3,h4,h5,h6 {
-		font-family: "Libre Baskerville";
-	}
-	p {
-		font-family: "Open Sans";
+		font-weight: 600;
 	}
 	button {
 		font-weight: bold;
 	}
 
-
-	.page {
-		width:960px;
-		margin: 0 auto;
-	}
 	.dark {
 		background-color: color("grey", "darken-4");
 		h1,h2,h3,h4,h5,h6 {
 			color:white;
 		}
 	}
-	.navbar {
-		text-align: center;
-	}
 	.subtle-grey {
-		background-color:color("grey", "ligthen-4");
-		border-bottom: 1px solid color("grey", "ligthen-3");
+		background-color:color("grey", "lighten-4");
+		border-bottom: 1px solid color("grey", "lighten-3");
 	}
-
-	.pricing {
-		.card>h2 {
-			margin-bottom:0px;
-		}
-		h2 span:first-child {
-			color: color("primary", "darken-2");
-		}
-		h2 span:last-child {
-			color: color("primary", "darken-3");
-		}
-		.card>small {
-			opacity:0.6;
-		}
-	}
-
 
 	// LANDING CONTENT
 	.fixed-background-vitrine {
 		width:100%;
 		height:100%;
 		display:flex;
-		text-align: center;
 		.section-content {
 			width:95%;
 		}
 		.section-background {
 			-webkit-filter: brightness(0.6);
 		}
-		h4 {
-			@extend .uppercase;
-			letter-spacing: 0.7rem;
-			&:before, &:after {
-				content: '\2014';
-	  			padding: 0 0.5em;
-			}
-		}
 	}
-	.logo {
-		color: color("primary", "base");
-	}
+
 	.everest {
 		width: 100%;
 		height:600px;
@@ -97,68 +78,7 @@ $color-primary: #47DBB4;
 	.timer span:nth-child(2n) {
 		color: color("primary", "darken-2");
 	}
-	// NAVBAR CONTENT
-	.navbar {
-		ul {
-			margin-left:-45px;
-			margin-top:0px;
-			margin-bottom:0px;
-		}
-		ul li {
-			margin-top: 25px;
-			margin-left: 30px;
-			display:inline-block;
-			&:nth-child(1){
-				@include underline-by-right(white);
-			}
-			&:nth-child(2){
-				@include underline-by-right(white);
-			}
-			&:nth-last-child(1){
-				@include underline-by-left(white);
-			}
-			&:nth-last-child(2){
-				@include underline-by-left(white);
-			}
 
-			a {
-				font-size: 1.8rem;
-				font-family: $title-font;
-				display:inline-block;
-				padding:0px 5px;
-				color:#DDD;
-				line-height: 2rem;
-				vertical-align: middle;
-				transition:all 200ms ease-in-out;
-				opacity:0.8;
-				&:hover {
-					opacity:1;
-				}
-			}
-			&:first-child {
-				margin-left:0px;
-			}
-		}
-		&.fixed {
-			background-color: rgba(color("grey", "darken-4"), 0.8);
-			border-bottom:0px solid;
-			ul li {
-				margin-top: 4px;
-				margin-left: 15px;
-				a {
-					color:#FFF;
-					padding: 10px 5px;
-				}
-			}
-		}
-		&.minified {
-			ul li {
-				a {
-					padding: 5px 5px;
-				}
-			}
-		}
-	}
 	.mockup-wrapper {
 		background-image: url('../images/mockup/laptop.png');
 		width:550px;
@@ -171,28 +91,6 @@ $color-primary: #47DBB4;
 		}
 	}
 
-	footer {
-		background-color: color("grey", "darken-4");
-		color:white;
-		padding:40px;
-		h1,h2,h3,h4,h5,h6 {
-			color: white;
-		}
-		li {
-			line-height: $text-size / 1;
-		}
-		a {
-			font-size: $text-size;
-			line-height: $text-size / 1.3;
-			color: color("primary", "base");
-			font-weight: 600;
-			border-bottom: 1px solid rgba(color("grey", "darken-1"), 0.3);
-			&:focus, &:hover {
-				text-decoration: none;
-				border-bottom: 1px solid rgba(color("grey", "darken-1"), 0.8);
-			}
-		}
-	}
 }
 
 
